2005-08-17  Srinivasa Ragavan <sragavan@novell.com>

	* em-format-html-display.c 
	(efhd_bar_save_selected): Fix a warning.
	(efhd_bar_resize): Fix the bar size to match other widgets.
	(efhd_bar_scroll_event): Fix scroll issue over bar. bug #312224.
	(efhd_add_bar): Add a frame around the attachment bar. bug #312033

2005-08-17  Kaushal Kumar  <kakumar@novell.com>

	* em-composer-prefs.c (url_requested): Add the close call for fd.

	See bug #307375.

2005-08-15  Not Zed  <NotZed@Ximian.com>

	** See #313440.

	* Makefile.am (mailinclude_HEADERS): Include the idl generated
	headers.

2005-08-16  Srinivasa Ragavan <sragavan@novell.com>

	* em-format-html-display.c (efhd_attachment_button): Sets the filename
	in the attachment structure instead of the part
	
2005-08-15  Christian Kellner  <gicmo@gnome.org>

	* mail-send-recv.c: (get_folders): Honour the check_all
	flag for the scalix provider.
	Fixes bug #313582.

2005-08-14  Rodney Dawes  <dobey@novell.com>

	* em-folder-view.c (emfv_popup_items): Fix two mnemonic conflicts in
	the context menus for the mailer

2005-08-12  Vivek Jain <jvivek@novell.com>

	* em-account-editor.c : (emae_check_complete)
	first prepare the page and then validate
	**Fixes #273842

2005-08-11  Not Zed  <NotZed@Ximian.com>

	** See #232499.

	* mail-folder-cache.c (rename_folders): rename view meta-data
	along with the folder.

2005-08-11  Vivek Jain <jvivek@novell.com>
	
	* em-folder-tree-model.c: (account_changed)
	check if the account is enabled, before adding the store
	** Fixes #313057
	
2005-08-11  Parthasarathi Susarla <sparthasarathi@novell.com>

	* em-folder-view.c
	(emfv_enable_menus): return the target in any case.
	It will be an empty target and not NULL.
	Fixes bug ** 312420

2005-08-11  Srinivasa Ragavan <sragavan@novell.com>

	* em-format-html-display.c (efhd_attachment_bar_refresh) (efhd_bar_resize)
	(efhd_add_bar): Fix to hide the attachment bar when no attachments and to 
	resize when the window is resized.
